--- a/config
+++ b/config
@@ -13,6 +13,17 @@ set $mod Mod4
 set $bcolor #044440
 set $fcolor #DD6633
 
+set $ws_1  1:MAIN
+set $ws_2  2:WWW
+set $ws_3  3:MEDIA
+set $ws_4  4:SYS
+set $ws_5  5:DEV
+set $ws_6  6:FILE
+set $ws_7  7
+set $ws_8  8
+set $ws_9  9:PHALANX
+set $ws_10 10
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
                      
@@ -126,28 +137,28 @@ bindsym $mod+Shift+n move container to workspace next
 bindsym $mod+Shift+b move container to workspace prev
 
 # switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+bindsym $mod+1 workspace number $ws_1
+bindsym $mod+2 workspace number $ws_2
+bindsym $mod+3 workspace number $ws_3
+bindsym $mod+4 workspace number $ws_4
+bindsym $mod+5 workspace number $ws_5
+bindsym $mod+6 workspace number $ws_6
+bindsym $mod+7 workspace number $ws_7
+bindsym $mod+8 workspace number $ws_8
+bindsym $mod+9 workspace number $ws_9
+bindsym $mod+0 workspace number $ws_10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+1 move container to workspace number $ws_1
+bindsym $mod+Shift+2 move container to workspace number $ws_2
+bindsym $mod+Shift+3 move container to workspace number $ws_3
+bindsym $mod+Shift+4 move container to workspace number $ws_4
+bindsym $mod+Shift+5 move container to workspace number $ws_5
+bindsym $mod+Shift+6 move container to workspace number $ws_6
+bindsym $mod+Shift+7 move container to workspace number $ws_7
+bindsym $mod+Shift+8 move container to workspace number $ws_8
+bindsym $mod+Shift+9 move container to workspace number $ws_9
+bindsym $mod+Shift+0 move container to workspace number $ws_10
 
 
 # reload the configuration file
