--- a/config
+++ b/config
@@ -13,6 +13,8 @@ set $mod Mod4
 set $bcolor #044440
 set $fcolor #DD6633
 
+set $term_exec exec i3-sensible-terminal -e
+
 set $ws_1  1
 set $ws_2  2
 set $ws_3  3
@@ -70,7 +72,7 @@ bindsym Print                exec xfce4-screenshooter
 bindsym $mod+Shift+o  exec /home/minasmazar/.i3/i3-ctl.sh outpad
 
 # Bind util X11 bins
-bindsym Shift+Pause          exec x-terminal-emulator -x xev
+bindsym Shift+Pause          $term_exec xev
 
 # change focus
 #bindsym $mod+l focus left
@@ -198,11 +200,11 @@ mode "MIRV" {
   bindsym f exec thunar
   bindsym o exec opera
   bindsym c exec chromium-browser
-  bindsym m workspace 3:MEDIA, split v, exec gxmms2, exec x-terminal-emulator -x alsamixer, workspace back_and_forth
+  bindsym m exec $term_exec cmus, split v, $term_exec alsamixer
   bindsym k exec gkrellm
   bindsym j exec jedit
   bindsym p exec /home/minasmazar/.i3/i3-ctl.sh phalanx
-  bindsym b exec x-terminal-emulator -x rvm default exec pescobells demone --cli-audio-player=play
+  bindsym b exec $term_exec rvm default exec pescobells demone --cli-audio-player=play
 
   bindsym Escape mode "default"
   bindsym $mod+m mode "default"
@@ -210,7 +212,7 @@ mode "MIRV" {
 
 mode "I3:MACROS" {
 
-  bindsym c  exec x-terminal-emulator -x rvm default exec cappuccino
+  bindsym c  $term_exec rvm default exec cappuccino
 
   bindsym Escape mode "default"
   bindsym Return mode "default"
@@ -224,20 +226,20 @@ bindsym $mod+i    exec /home/minasmazar/.i3/i3-ctl.sh
 bindsym $mod+m    mode "mirv"
 
 # Appplication assignments
-assign [class="Chromium-browser"] 2:WWW
-assign [class="Opera"] 2:WWW
-assign [class="thunar"] 3:FILE
-assign [class="wicd-client.py"] 4:SYS
-assign [title="win0"] 5:DEV
-assign [class="gxmms"] 6:MEDIA, floating disable
-assign [class="libreoffice"] 7:OFFICE
-
-for_window [class="xfce4-notifyd"] floating enable
-for_window [class="thunar"] move to workspace 3:FILE
-for_window [class="gkrellm"] move to workspace 4:SYS , floating enable
-for_window [class="Conky"] move to workspace 4:SYS
-for_window [class="gxmms2"] move to workspace 6:MEDIA , floating disable
-for_window [class="gxmms2" title="(?i)Playlist Editor"] move to workspace 6:MEDIA , floating disable
+#assign [class="Chromium-browser"] 2:WWW
+#assign [class="Opera"] 2:WWW
+#assign [class="thunar"] 3:FILE
+#assign [class="wicd-client.py"] 4:SYS
+#assign [title="win0"] 5:DEV
+#assign [class="gxmms"] 6:MEDIA, floating disable
+#assign [class="libreoffice"] 7:OFFICE
+#
+for_window [class="Xfce4-notifyd"] floating enable
+#for_window [class="thunar"] move to workspace 3:FILE
+#for_window [class="gkrellm"] move to workspace 4:SYS , floating enable
+#for_window [class="Conky"] move to workspace 4:SYS
+#for_window [class="gxmms2"] move to workspace 6:MEDIA , floating disable
+#for_window [class="gxmms2" title="(?i)Playlist Editor"] move to workspace 6:MEDIA , floating disable
 
 # Defining borders
 new_window pixel 4
@@ -246,7 +248,6 @@ new_window pixel 4
 # finds out, if available)
 bar {
         position top
-
         output LVDS1
         output VGA1
 
