--- a/config
+++ b/config
@@ -81,9 +81,9 @@ bindsym Shift+Pause          $term_exec xev
 #bindsym $mod+p focus right
 
 bindsym $mod+j focus left
-bindsym $mod+k focus down
+bindsym $mod+k focus right
 bindsym $mod+l focus up
-bindsym $mod+ograve focus right
+bindsym $mod+ograve focus down
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -234,8 +234,8 @@ bindsym $mod+r    mode "resize"
 #bindsym $mod+m    mode "MIRV"
 bindsym $mod+m    mode "LAUNCH"
 
-bindsym $mod+t    exec $i3api get_all_workspaces | dmenu -b | $i3api goto_workspace _stdin_
-bindsym $mod+Shift+t    exec $i3api get_workspaces | dmenu -b | $i3api move_to_workspace _stdin_
+bindsym $mod+igrave    $i3api get_all_workspaces | dmenu -b | $i3api goto_workspace _stdin_
+bindsym $mod+Shift+igrave    $i3api get_workspaces | dmenu -b | $i3api move_to_workspace _stdin_
 bindsym $mod+Shift+m exec xfce4-appfinder
 
 # Appplication assignments
@@ -310,4 +310,4 @@ exec xrandr --output VGA1 --right-of LVDS1
 exec feh --bg-scale ~/Immagini/392784-vintage-swirly-pattern.jpg
 # exec conky -u 4
 # exec x-terminal-emulator -x vim ~/.i3/config
-
+exec $i3api workspace 99:i3-config, split h, exec gvim ~/.i3/config, exec i3-sensible-terminal, workspace 1
